logs/leankitmocks.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/leankit'...
Listing './lib/python3.5/site-packages/leankit-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/leankitmocks'...
Compiling './lib/python3.5/site-packages/leankitmocks/__init__.py'...
***   File "./lib/python3.5/site-packages/leankitmocks/__init__.py", line 19
    log.debug(f'GET {url}')
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/leankitmocks/data'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000/20'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000/boardversion'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000/boardversion/20'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000/getcard'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/100000000/getcard/20'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/200000000'...
Listing './lib/python3.5/site-packages/leankitmocks/data/board/200000000/getcard'...
Listing './lib/python3.5/site-packages/leankitmocks/data/boards'...
Listing './lib/python3.5/site-packages/leankitmocks/data/card'...
Listing './lib/python3.5/site-packages/leankitmocks/data/card/history'...
Listing './lib/python3.5/site-packages/leankitmocks/data/card/history/100000000'...
Listing './lib/python3.5/site-packages/leankitmocks/data/card/history/100000000/20'...
Listing './lib/python3.5/site-packages/leankitmocks/data/card/history/200000000'...
Compiling './lib/python3.5/site-packages/leankitmocks/generator.py'...
***   File "./lib/python3.5/site-packages/leankitmocks/generator.py", line 26
    main = [f'/Boards/{board.id}', f'/Board/{board.id}/Archive']
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/leankitmocks-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
